policies/common-resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: common
---
