policies/verify-task-bundle-signatures.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: signed-task-bundle
spec:
  validationFailureAction: enforce
  rules:
  - name: check-signature
    match:
      resources:
        kinds:
        - TaskRun
    imageExtractors:
      TaskRun:
        - name: "taskruns"
          path: /spec/taskRef
          value: "bundle"
          key: "name"
    verifyImages:
    - imageReferences:
      - "*"
      required: false
      attestors:
      - entries:
        - keys: 
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEIzNgvCdrKDPPyWLiNO+RrAqP5UxS
[...]
              -----END PUBLIC KEY-----
